# study-projects

android/colloquium2/app/: build.gradle  proguard-rules.pro
android/exam1/app/: manifest-merger-release-report.txt
android/extratask1/app/: build.gradle  manifest-merger-release-report.txt
android/lesson5/app/: build.gradle
android/lesson6/app/: build.gradle
android/lesson8/: import-summary.txt
android/lesson8/app/: build.gradle  manifest-merger-release-report.txt
assembly/: README.md
assembly/task1/: Makefile  hw1.h  hw_sprintf.asm  test.cpp
assembly/task2/: Makefile  matrix.asm  matrix.h  test.cpp
assembly/tuner/: Makefile  README.md
assembly/tuner/src/: libtuner_utils.h  tuner.c  tuner.h  tuner_utils.asm
automato/src/: A.java  B.java  C.java  D.java  E.java  F.java  G.java  I.java  J.java
automato/tests/: continuous.out  mutation.in  mutation.out  trees.out
coding_theory/: main.tex
coding_theory/images/: AWGN.eps  BSC.eps  G_graph.eps  sindrom.eps
computing_methods/CourseWork/src/: CachingWrapper.scala  Coefficients.scala  Experiment.scala  GaussMethod.scala  GradientMethod.scala  Graphic.scala  JacobiMethod.scala  LinearEquationSystem.scala  LinearSystemsSolvingMethod.scala  Main.scala  Matrix.scala  Point.scala  SeidelMethod.scala  SeidelRelaxationMet.scala  Solver.scala  SolverT.scala  Systems.scala  Vector.scala
computing_methods/MethodOfSimpleIterations/src/: Processor.java  Solver.java
computing_methods/NewtonMethod/src/: Complex.java  Processor.java
computing_methods/SystemOfLinearEquations/src/: GaussMethod.java  GradientMethod.java  JacobiMethod.java  LinearEquationsSystem.java  Main.java  Matrix.java  MatrixTest.java  SeidelMethod.java  SeidelRelaxationMethod.java  SolverTest.java  SolvingMethod.java  Vector.java
cpp/year2013/Assembler/: mul.asm  sub.asm
cpp/year2013/BigInteger/: big_integer.cpp  big_integer.h  container.cpp  container.h  copy_on_write.cpp  copy_on_write.h  my_vector.cpp  my_vector.h
cpp/year2013/BinaryTree/: iterator.cpp  iterator.h  my_iterator.cpp  node.cpp  node.h  set.cpp  set.h  set_testing.cpp
cpp/year2013/List/: const_iterator.cpp  const_iterator.h  const_reverse_iterator.cpp  const_reverse_iterator.h  iterator.cpp  iterator.h  list.cpp  list.h  main.cpp  node.cpp  node.h  reverse_iterator.cpp  reverse_iterator.h
cpp/year2013/Sort/: main.cpp
cpp/year2014/: README.md
cpp/year2014/BigInteger/: big_integer.cpp  big_integer.h  container.h  (+4 more)
cpp/year2014/Graph/: CMakeLists.txt  graph.cpp  graph.h  graph_test.txt  graph_testing.cpp
cpp/year2014/Poker/: CMakeLists.txt  Player.h  cards.cpp  cards.h  human_player.cpp  human_player.h  main.cpp  poker_testing.cpp  table.cpp  table.h  texas_holdem.cpp  texas_holdem.h
cpp/year2014/Poker/gtest/: gtest.h
discrete_math/Automata/: B.java  D.java  E.java
discrete_math/Bison-antlr/: test.c  test.in
discrete_math/CFGrammar/: E.java
discrete_math/Combinatorics/: A2.cpp  A3.cpp  C3.cpp  D3.cpp  E1.cpp  E2.cpp  F1.cpp  F2.cpp  F3.cpp  G2.cpp  G3.cpp  I2.cpp  J2.cpp
discrete_math/DFS 2/: A.java  C.java  D.java  E.java
discrete_math/Dynamic Programming/: A.cpp  B.cpp  C.cpp  D.cpp  F.cpp  G.cpp  H.cpp
discrete_math/Flow/: A.java  B.java  F.java
discrete_math/Hash/: C.java
discrete_math/Linar data structures/: A.cpp  B.cpp  C.cpp  D.cpp  F.cpp  H.cpp
discrete_math/Matroids/: A.java  E.java
discrete_math/MinCost/: C.java  D.java
discrete_math/Minimization/: A.java  C.java  D.java
discrete_math/Perl/: 103.pl  106.pl  107.pl  109.pl  110.pl  206.pl  207.pl  209.pl  301.pl
discrete_math/Priority queue/: A.cpp  B.cpp  C.cpp  D_2.cpp
discrete_math/Probability/: A.cpp  C.cpp  E.cpp
discrete_math/Search Trees/: C.java
discrete_math/Segment Tree/: A.cpp  B.cpp  C.java
discrete_math/Short Path/: C.java  F.java  G.java
discrete_math/Sort and Binary Search/: A.java  B.java  E.java  G.java
discrete_math/Spanning Tree/: A.java  B.java  C.java  D.java  E.java
discrete_math/Subword search/: C.java  D.java  E.java
discrete_math/SuffixStructures/: C.java
discrete_math/Turing/: F.java  J.java  L.java
functional_programming/CW/: CW.hs
functional_programming/CW2/: CW2.cabal
functional_programming/Task1/: Task.hs
functional_programming/Task10/: Task10.cabal
functional_programming/Task2/: Task2.cabal
functional_programming/Task3/: Task3.cabal
functional_programming/Task4/: Task4.cabal
functional_programming/Task4/src/: Lib.hs  Task1.hs  Task2.hs  Task3.hs  Task3A.hs  Task3B.hs  Task3C.hs  Task3D.hs  Task4.hs
functional_programming/Task5/: Task5.cabal
functional_programming/Task6/: Task6.cabal
functional_programming/Task7/: Task7.cabal
functional_programming/Task7/app/: Main.hs  Task1.hs  Task2.hs
functional_programming/Task8/: Task8.cabal
functional_programming/Task8/app/: Main.hs  Task3.hs
functional_programming/Task8/src/: Lib.hs  Task1.hs  Task2.hs
functional_programming/Task9/: Task9.cabal
java/year2015/: buildBank.sh  javadoc.sh  runClient.sh  runCrawlerTest.sh  runHelloUDPTestClient.sh  runHelloUDPTestServer.sh  runServer.sh  runUICopyFile.sh
math_logic/: README.md
math_logic/Task1/: input.txt  output.txt
math_logic/Task2/: output.txt
math_logic/Task4/: exist.in  forall.in  input.txt  output.txt
math_logic/Task8/: input.in  input.out
multicast_dns/: pom.xml  test.sh
os/: Makefile  README.md  conf.sh
os/bipiper/: Makefile  forking.c  polling.c
os/bufcat/: Makefile  bufcat.c
os/cat/: cat.c
os/cw3/: a.out  main.c
os/filesender/: Makefile  filesender.c
os/filter/: filter.c
os/lib/: Makefile  bufio.c  bufio.h  helpers.c  helpers.h
os/netsh/: Makefile  netsh.c  test.sh
os/revwords/: revwords.c
os/simplesh/: Makefile  simplesh.c
persistent_list/: pom.xml
software_design/Lab2/: .gitignore  pom.xml
software_design/Lab3/: pom.xml
software_design/Lab4/: .gitignore  pom.xml  todo.db
software_design/Lab5/: input.txt  input2.txt
type_theory/: README.md
type_theory/tests/: task2.in  task2.out  task3.out  task4.in  task4.out  task5.in  task5.out  task6.in  task6.out
(+642 files in other folders)
