name:                Task4
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Task4#readme
license:             BSD3
license-file:        LICENSE
author:              Markovnikov Nikita
maintainer:          niklemark@gmail.com
copyright:           2016 Markovnikov Nikita
category:            Learning
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Task1
                     , Task2
                     , Task3
                     , Task3A
                     , Task3B
                     , Task3C
                     , Task3D
                     , Task4
  ghc-options:         -Wall -fno-warn-orphans
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Task4-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Task4
  default-language:    Haskell2010

test-suite Task4-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Task4
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mikita95/FunctionalProgramming
