name:                Task8
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Task8#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
                     , Task1
                     , Task2
  build-depends:       base >= 4.7 && < 5
                     , transformers
  default-language:    Haskell2010

executable Task8-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Task3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Task8
                     , array
                     , split
                     , text
                     , transformers
                     , containers
                     , either
  default-language:    Haskell2010

test-suite Task8-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Task8
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Task8
